deployment/redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: reefmonitor
spec:
  redirectScheme:
    scheme: https
    permanent: true
