deployment/postgre.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: reefmonitor   
spec:
  serviceName: postgres
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.1-alpine
          volumeMounts:
            - name: postgres-db-disk
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: postgres-db-disk
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: reefmonitor  
spec:
  selector:
    app: postgres
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
