deployment/reefmonitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reefmonitor
  namespace: reefmonitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reefmonitor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: reefmonitor
    spec:
      containers:
      - name: reefmonitor
        image: motzi/reefmonitor:v1.0.0
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  namespace: reefmonitor
  name: reefmonitor
spec:
  selector:
    app: reefmonitor
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
