deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: reefmonitor
  name: reefmonitor
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: reefmonitor-issuer
    traefik.ingress.kubernetes.io/router.middlewares: reefmonitor-redirect@kubernetescrd
spec:
  tls:
  - hosts: 
    - reefmonitor.de
    secretName: reefmonitor-cert
  rules:
  - host: reefmonitor.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: reefmonitor
            port: 
              number: 8000
